--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "![Design preview for the Clipboard landing page coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "sass":"sass -w sass/main.scss:css/style.css",
-    "server":"live-server",
+    "sass": "sass -w sass/main.scss:css/style.css",
+    "server": "live-server",
     "start": "npm-run-all --parallel sass server"
   },
   "author": "AliReza",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^6.0.1",
-    "npm-run-all": "^4.1.5"
-  }
+    "npm-run-all": "^4.1.5",
+    "wowjs": "^1.1.3"
+  },
+  "dependencies": {}
 }
