--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^6.0.1",
-    "npm-run-all": "^4.1.5",
-    "wowjs": "^1.1.3"
+    "npm-run-all": "^4.1.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "animate.css": "^4.1.1",
+    "wowjs": "^1.1.3"
+  }
 }
